[Misc] add more implementation

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 springVersion=2.5.4
 ktorClientVersion=1.6.3
+kotlinSerializationVersion=1.2.2
 kotlinCoroutinesVersion=1.5.2
+jacksonVersion=2.12.5
 mockkVersion=1.12.0
 junitVersion=5.7.2
