Update dependencies and java

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
-springVersion=2.5.4
-ktorClientVersion=1.6.3
-kotlinSerializationVersion=1.2.2
-kotlinCoroutinesVersion=1.5.2
-jacksonVersion=2.12.5
+springVersion=2.6.3
+ktorClientVersion=1.6.7
+kotlinSerializationVersion=1.3.2
+asyncClientVersion=2.12.3
+kotlinCoroutinesVersion=1.6.0
+jacksonVersion=2.13.1
 mockkVersion=1.12.0
 junitVersion=5.7.2
