--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-springVersion=2.6.3
-ktorClientVersion=1.6.7
+springVersion=2.7.3
+#ktorClientVersion=1.6.7
 kotlinSerializationVersion=1.3.2
 asyncClientVersion=2.12.3
-kotlinCoroutinesVersion=1.6.0
-jacksonVersion=2.13.1
-mockkVersion=1.12.0
-junitVersion=5.7.2
+kotlinCoroutinesVersion=1.6.4
+jacksonVersion=2.13.3
+mockkVersion=1.12.1
+junitVersion=5.8.2
