--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-springVersion=2.7.3
-#ktorClientVersion=1.6.7
-kotlinSerializationVersion=1.3.2
+springVersion=2.7.6
+ktorClientVersion=2.1.1
+kotlinSerializationVersion=1.4.0
 asyncClientVersion=2.12.3
 kotlinCoroutinesVersion=1.6.4
 jacksonVersion=2.13.3
